
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2005 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd 0.9.x

  - Cut off oversized IRC messages that should be sent to the network instead
    of shuttding down the (wrong) connection.
  - Don't generate error messages for unknown commands received before the
    client is registered with the server (like the original ircd).
  - Never run with root privileges but always switch the user ID.
  - Make "netsplit" messages RFC compliant.
  - Fix handling of QUIT Messages: send only one message, even if the client
    is member of multiple channels.
  - Don't exit server if closing of a socket fails; instead ignore it and
    pray that this will be "the right thing" ...
  - Implemented the IRC function "WHOWAS".
  - Don't enable assert() calls when not ./configure'd with --enable-debug.
  - Fixed ./configure test for TCP Wrappers: now it runs on Mac OS X as well.
  - Enhanced configure script: now you can pass an (optional) search path
    to all --with-XXX parameters, e. g. "--with-ident=/opt/ident".
  - Removed typedefs for the native C datatypes.
    Use stdbool.h / inttypes.h if available.
  - New configuration option "OperServerMode" to enable a workaround needed
    when running an network with ircd2 servers and "OperCanUseMode" enabled
    to prevent the ircd2 daemon to drop mode changes of IRC operators.
    Patch by Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Implemented support for "secret channels" (channel mode "s").
  - New configuration option "Mask" for [Operator] sections to limit OPER
    commands to users with a specific IRC mask. Patch from Florian Westphal.
  - Write "error file" (/tmp/ngircd-XXX.err) only if compiled with debug